Customize : Edit overflow on list icons

--- a/src/app/private/trainer/customize/directives.tmpl/index.html
+++ b/src/app/private/trainer/customize/directives.tmpl/index.html
@@ -21,11 +21,13 @@
 </div>
 <div 	ng-if="customizeIndexCtrl.tabs.display" class="modal__content">
 	<div 
+		class="modal__content__colors"
 		active-color="customizeIndexCtrl.infos.color" 
 		change="customizeIndexCtrl.changeColor" 
 		trainer-sessions-customize-colors>	
 	</div>
 	<div 
+		class="modal__content__icons"
 		active-icon="customizeIndexCtrl.infos.icon" 
 		change="customizeIndexCtrl.changeIcon"
 		trainer-sessions-customize-icons >	
