--- a/src/app/private/trainer/customize/directives.tmpl/infos-form.html
+++ b/src/app/private/trainer/customize/directives.tmpl/infos-form.html
@@ -1,12 +1,12 @@
 <div class="infos--main">
 	<label class="infos__label">Name</label>
-	<input ng-model="activeInfos.name" class="input input--small" type="text" placeholder="name" />
+	<input ng-model="activeInfos.name" class="input input--small" type="text" placeholder="Name is required" />
 	<label class="infos__label">Comment</label>
-	<textarea ng-model="activeInfos.comments" class="input input--small input--multi-lines" placeholder="comment"></textarea>
+	<textarea ng-model="activeInfos.comments" class="input input--small input--multi-lines" placeholder="Comment is optionnal"></textarea>
 </div>
 <div class="infos--secondary">
 	<label class="infos__label">Token</label>
-	<input ng-model="activeInfos.token" class="input input--small" type="text" placeholder="token" />
+	<input ng-model="activeInfos.token" class="input input--small" type="text" placeholder="Token without space is required" />
 	<label class="infos__label">Type</label>
 	<label class="choice">
 		<div class="choice__box">
