--- a/src/app/private/scenarist/customize/directives.tmpl/index.html
+++ b/src/app/private/scenarist/customize/directives.tmpl/index.html
@@ -1,6 +1,6 @@
 <div class="modal__header">
 	<div class="modal__illustration illustration illustration--medium illustration--icon" illustration="ICON_{{customizeIndexCtrl.infos.color}}_{{customizeIndexCtrl.infos.icon}}"></div>
-	<h5 class="modal__title">{{customizeIndexCtrl.scenarios.name | limitTo: 36}}<span ng-if="customizeIndexCtrl.scenarios.name.length > 36">...</span></h5>
+	<h5 class="modal__title">{{customizeIndexCtrl.scenario.name | limitTo: 36}}<span ng-if="customizeIndexCtrl.scenarios.name.length > 36">...</span></h5>
 	<a class="modal__close button button--medium button--label-off button--default-reverse button--close" ng-click="close()">
    		<span class="button__label">Close</span>
 	</a>
@@ -21,11 +21,13 @@
 </div>
 <div 	ng-if="customizeIndexCtrl.tabs.display" class="modal__content">
 	<div 
+		class="modal__content__colors"
 		active-color="customizeIndexCtrl.infos.color" 
 		change="customizeIndexCtrl.changeColor" 
 		scenarist-customize-colors>	
 	</div>
 	<div 
+		class="modal__content__icons"
 		active-icon="customizeIndexCtrl.infos.icon" 
 		change="customizeIndexCtrl.changeIcon"
 		scenarist-customize-icons >	
