--- a/src/app/private/admin/directives.tmpl/actions.html
+++ b/src/app/private/admin/directives.tmpl/actions.html
@@ -2,5 +2,5 @@
     <h3>Available actions</h3>
     <p><button class="button button--default" ui-sref="wegas.private.admin.users">Manage Users</button></p>
     <p><button class="button button--default" ui-sref="wegas.private.admin.groups">Manage Groups</button></p>
-    <p><button class="button button--default" ui-sref="wegas.private.admin.games">Manage Games</button></p>
+    <p><a class="button button--default" href="{{ServiceURL}}wa.html">Manage sessions</a></p>
 </div>
