--- a/src/assets/sass/tools/_buttons-tools.scss
+++ b/src/assets/sass/tools/_buttons-tools.scss
@@ -23,7 +23,8 @@ $buttons-icon : (
     (eye, $fa-var-eye),
     (lock, $fa-var-lock),
     (unlock, $fa-var-unlock),
-    (valid, $fa-var-check)
+    (valid, $fa-var-check),
+    (admin, $fa-var-user-secret)
 );
 
 %button--with-icon{
