Edit name ask by Dom

--- a/src/app/private/admin/directives.tmpl/actions.html
+++ b/src/app/private/admin/directives.tmpl/actions.html
@@ -1,6 +1,6 @@
 <div>
     <h3>Available actions</h3>
-    <p><button class="button button--default" ui-sref="wegas.private.admin.users">Manage Users</button></p>
-    <p><button class="button button--default" ui-sref="wegas.private.admin.groups">Manage Groups</button></p>
-    <p><a class="button button--default" href="{{ServiceURL}}wa.html">Manage sessions</a></p>
+    <p><button class="button button--default" ui-sref="wegas.private.admin.users">Users</button></p>
+    <p><button class="button button--default" ui-sref="wegas.private.admin.groups">Groups</button></p>
+    <p><a class="button button--default" href="{{ServiceURL}}wa.html">Sessions</a></p>
 </div>
