--- a/src/app/private/admin/users/directives.tmpl/list.html
+++ b/src/app/private/admin/users/directives.tmpl/list.html
@@ -10,7 +10,7 @@
     </div>
 </div>
 <div class="view__list" repeat-auto-load>
-    <div class="card card--big card--player-session" ng-repeat="user in users | filter: {account :{ email: search, lastname: search}} | limitTo: maxUsersDisplayed" user="user" >
+    <div class="card card--big card--player-session" ng-repeat="user in users | filter: {account: { email: search }} | limitTo: maxUsersDisplayed" user="user" >
 
         <div class="card__illustration illustration illustration--big illustration--icon" illustration="ICON_grey_user"></div>
         <div class="card__description">
