- add a remove button

--- a/src/assets/sass/tools/_buttons-tools.scss
+++ b/src/assets/sass/tools/_buttons-tools.scss
@@ -19,6 +19,7 @@ $buttons-icon : (
     (trainer, $fa-var-tachometer),
     (scenarist, $fa-var-magic),
     (add, $fa-var-plus-circle),
+    (remove, $fa-var-minus-circle),
     (download, $fa-var-download),
     (eye, $fa-var-eye),
     (lock, $fa-var-lock),
