--- a/src/app/private/profile/tmpl/profile-content.html
+++ b/src/app/private/profile/tmpl/profile-content.html
@@ -1,18 +1,18 @@
 <form class="form form__create-scenario" ng-submit="updateInformations()">
   <div class="form__row">
-    <input class="input" type="text" ng-model="user.firstname" placeholder="Please enter your firstname" autocomplete="off">
+    <input class="input" type="text" ng-model="user.account.firstname" placeholder="Please enter your firstname" autocomplete="off">
   </div>
   <div class="form__row">
-    <input class="input" type="text" ng-model="user.lastname" placeholder="Please enter your lastname" autocomplete="off">
+    <input class="input" type="text" ng-model="user.account.lastname" placeholder="Please enter your lastname" autocomplete="off">
   </div>
   <div class="form__row">
-    <input class="input" type="text" ng-model="user.username" placeholder="Please enter your username" autocomplete="off">
+    <input class="input" type="text" ng-model="user.account.username" placeholder="Please enter your username" autocomplete="off">
   </div>
   <div class="form__row">
-    <input class="input" type="password" ng-model="user.password" placeholder="Password" autocomplete="off">
+    <input class="input" type="password" ng-model="user.account.password" placeholder="Password" autocomplete="off">
   </div>
   <div class="form__row">
-    <input class="input" type="password" ng-model="user.password2" placeholder="Confirm password" autocomplete="off">
+    <input class="input" type="password" ng-model="user.account.password2" placeholder="Confirm password" autocomplete="off">
   </div>
  <div class="form__row form__row--right">
     <input class="form__row__btn button button--default" type="submit"  value="Save" />
