--- a/src/app/public/signup/signup.tmpl.html
+++ b/src/app/public/signup/signup.tmpl.html
@@ -1,6 +1,6 @@
 <form class="view__login-form form" ng-submit="signup()" ng-controller="PublicSignupCtrl">
   <div class="form__row">
-      <input class="form__row__entry input input--small input--primary" ng-model="publicSignupCtrl.formInfo.email" type="text" id="login" placeholder="email" autocomplete="off">
+      <input class="form__row__entry input input--small input--primary" ng-model="email" type="email" id="login" placeholder="Email" autocomplete="off">
   </div>
   <div class="form__row">
       <input class="form__row__entry input input--small input--primary" ng-model="username" type="text" id="username" placeholder="Username" autocomplete="off">
