--- a/src/app/public/login/login.tmpl.html
+++ b/src/app/public/login/login.tmpl.html
@@ -1,9 +1,9 @@
-<form class="view__login-form form" ng-submit="publicLoginCtrl.login()">
+<form class="view__login-form form" ng-submit="login()" ng-controller="PublicLoginCtrl">
 	<div class="form__row">
-    	<input class="form__row__entry input input--small input--primary" type="text" class="form-control" id="login" placeholder="email or username" autocomplete="off" ng-model="publicLoginCtrl.userToLogin.username">
+    	<input class="form__row__entry input input--small input--primary" type="text" class="form-control" id="login" placeholder="email or username" autocomplete="off" ng-model="username">
 	</div>
 	<div class="form__row">
-    	<input class="form__row__entry input input--small input--primary" type="password" class="form-control" id="password" placeholder="password" autocomplete="off" ng-model="publicLoginCtrl.userToLogin.password">
+    	<input class="form__row__entry input input--small input--primary" type="password" class="form-control" id="password" placeholder="password" autocomplete="off" ng-model="password">
 	</div>
 	<div class="form__row form__row--right">
     	<input class="form__row__btn button button--default" type="submit" class="form-control" value="Login" />
