Fusion after merge : Role become Group

--- a/src/app/private/admin/users/directives.tmpl/edit.html
+++ b/src/app/private/admin/users/directives.tmpl/edit.html
@@ -34,7 +34,7 @@
             <hr/>
         </div>
 
-        <admin-user-roles user="user"></admin-user-roles>
+        <admin-user-groups user="user"></admin-user-groups>
 
         <div class="form__row">
             <hr/>
