- Reduce history card size

--- a/src/app/private/scenarist/history/directives.tmpl/card.html
+++ b/src/app/private/scenarist/history/directives.tmpl/card.html
@@ -1,5 +1,5 @@
 
-<div class="card__illustration illustration illustration--big illustration--icon" illustration="ICON_blue_code-fork"></div>
+<div class="card__illustration illustration illustration--medium illustration--icon" illustration="ICON_blue_code-fork"></div>
 
 <div class="card__description card__description--one-line">
   <h4 class="card__description__titre">
