Display Form + Wrong label

--- a/src/app/private/scenarist/directives.tmpl/card.html
+++ b/src/app/private/scenarist/directives.tmpl/card.html
@@ -7,7 +7,7 @@
 </div>
 <div class="card__actions">
   <a class="button button--medium button--round button--default-reverse button--label-off button--customize" title="Customize session" ui-sref=".customize({scenarioId: scenario.id})">
-    <span class="button__label">Customize session</span>
+    <span class="button__label">Customize scenario</span>
   </a>
   <a class="button button--medium button--round button--default-reverse button--label-off button--user" title="Manage users" ui-sref=".coscenarists({scenarioId: scenario.id})">
     <span class="button__label">Manage User</span>
