--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -29,11 +29,10 @@ hr{
     clear:both;
 } 
 
-.v1{
-    a{
-        color:$secondary-color-dark;
-        transition: all 0.5s ease;
-    }
+a {
+    color:$default-color-button;
+    transition: all 0.5s ease;
+}
 
     a:hover, a:active{
         color:$secondary-color;
