--- a/src/app/public/public.tmpl.html
+++ b/src/app/public/public.tmpl.html
@@ -1,5 +1,5 @@
 <div class="view view--public-index view--reverse-top">
-	<h1 class="view__first-header">Bienvenue dans wegas</h1>
+	<h1 class="view__first-header">Welcome in wegas</h1>
 	<div class="view__public-nav">
 		<a class="link link--reverse" ui-sref-active="link--active" ui-sref="wegas.public.login">Login</a> 
 		<a class="link link--reverse" ui-sref-active="link--active" ui-sref="wegas.public.signup">Sign up</a> 
