- move remind password link

--- a/src/app/public/login/login.tmpl.html
+++ b/src/app/public/login/login.tmpl.html
@@ -6,6 +6,9 @@
     	<input class="form__row__entry input input--primary" type="password" class="form-control" id="password" placeholder="password" autocomplete="off" ng-model="password">
 	</div>
 	<div class="form__row form__row--right">
-    	<input class="form__row__btn button button--default" type="submit" class="form-control" value="Login" />
+        <input class="form__row__btn button button--default" type="submit" class="form-control" value="Login" />
 	</div>
+    <div class="form__row form__row--right">
+        <a ui-sref-active="link--active" ui-sref="wegas.public.password">Password forgotten</a>
+        </div>
 </form>
