--- a/src/assets/sass/objects/_modal.scss
+++ b/src/assets/sass/objects/_modal.scss
@@ -139,7 +139,7 @@
 			display:block;
 			position:relative;
 			width:100%;
-			height:200px;
+			height:300px;
 			overflow-x:hidden;
 			overflow-y:auto;
 		}
@@ -266,7 +266,7 @@
         	margin:0px;
 			.icon{
 				float:left;
-				margin:16px;
+				margin: 0 7px;
 				border:solid 0px white;
 				transition:.3s;
 				padding:6px 0px;
