--- a/src/app/private/scenarist/archives/directives.tmpl/index.html
+++ b/src/app/private/scenarist/archives/directives.tmpl/index.html
@@ -5,18 +5,10 @@
    		<span class="button__label">Close</span>
 	</a>
 </div>
-<div 
-	class="modal__content modal__content--nav-off"
-	scenarios="scenaristArchivesIndexCtrl.archives" 
+<div
+	class="modal__content--nav-tools-off"
+	scenarios="scenaristArchivesIndexCtrl.archives"
 	unarchive="scenaristArchivesIndexCtrl.unarchiveScenario"
 	delete="scenaristArchivesIndexCtrl.deleteArchivedScenario"
 	scenarist-scenarios-archives-list>
-</div>
-<div class="modal__tools">
-	<a 
-		class="button button--small button--danger button--trash" 
-		confirmed-click="scenaristArchivesIndexCtrl.deleteArchivedScenarios()" 
-        ng-confirm-click="Are you sure you want to delete all archived scenario ? This action is irreversible.">
-   			<span class="button__label">Delete all</span>
-	</a>
 </div>
