--- a/src/assets/sass/plugins/font-awesome/_variables.scss
+++ b/src/assets/sass/plugins/font-awesome/_variables.scss
@@ -2,7 +2,7 @@
 // --------------------------
 $fa-sass-asset-helper: false !default;
 
-$fa-font-path: "../assets/fonts/font-awesome/" !default;
+$fa-font-path: "../fonts/font-awesome/" !default;
 $fa-font-name: "fontawesome-webfont" !default;
 $fa-font-size-base: 14px !default;
 $fa-css-prefix: fa !default;
