- Better position of refresh button

--- a/src/app/private/trainer/users/users.tmpl.html
+++ b/src/app/private/trainer/users/users.tmpl.html
@@ -1,2 +1,2 @@
-<div class="modal" trainer-sessions-users-index close="modalsCtrl.close()"></div>
+<div class="modal modal--users" trainer-sessions-users-index close="modalsCtrl.close()"></div>
 <div class="shadow" ng-click="modalsCtrl.close()"></div>
