Edit display - Public

--- a/src/app/public/signup/signup.tmpl.html
+++ b/src/app/public/signup/signup.tmpl.html
@@ -1,17 +1,2 @@
-<form class="view__login-form form" ng-submit="signup()" ng-controller="PublicSignupCtrl">
-  <div class="form__row">
-      <input class="form__row__entry input input--primary" ng-model="email" type="email" id="login" placeholder="Email" autocomplete="off">
-  </div>
-  <div class="form__row">
-      <input class="form__row__entry input input--primary" ng-model="username" type="text" id="username" placeholder="Username" autocomplete="off">
-  </div>
-  <div class="form__row">
-      <input class="form__row__entry input input--primary" ng-model="p1"type="password" id="password1" placeholder="Password" autocomplete="off">
-  </div>
-    <div class="form__row">
-      <input class="form__row__entry input input--primary" ng-model="p2" type="password" id="password2" placeholder="Please retype your password" autocomplete="off">
-  </div>
-  <div class="form__row form__row--right">
-      <input class="form__row__btn button button--default" type="submit" value="Sign up" />
-  </div>
-</form>
+<div class="modal modal--public-signup" public-signup-index close="modalsCtrl.close()"></div>
+<div class="shadow" ng-click="modalsCtrl.close()"></div>
