--- a/src/assets/sass/objects/_link.scss
+++ b/src/assets/sass/objects/_link.scss
@@ -4,13 +4,13 @@
 	width:auto;
 	height:24px;
 	line-height:12px;
-	color:$secondary-color;
+	color:darken($secondary-color, 20%);
 	padding:6px 12px 6px 12px;
 	margin:4px 8px;
 	font-size:12px;
 	text-transform: uppercase;
 	border-radius:12px;
-	background-color:lighten($background-default, 4%);
+		background-color:$white;
 	text-decoration: none;
 	transition: .5s;
 
@@ -19,7 +19,11 @@
 		cursor:pointer;
 		text-decoration: none;
 		background-color:$white;
+		@include material-shadow(2);
 		transition: .5s;
+	}
+	&.link--medium{
+		margin:20px 0px;
 	}
 
 	&.link--active{
