--- a/src/assets/sass/objects/_view.scss
+++ b/src/assets/sass/objects/_view.scss
@@ -29,11 +29,8 @@
 
     &.view--public-index{
         height:100%;
-        @include make-sm-column(8);
+        @include make-sm-column(12);
         @include make-xs-column(12);
-        @media screen and (max-width: $screen-sm) {
-            height: auto;
-        }
     }
 
     &.view--public-forms {
@@ -280,13 +277,37 @@
     // Elements
     .view__first-header{
         display:block;
-        position:relative;
-        top:40%;
-        @media screen and (min-width: $screen-sm) {
-            margin-top:-22px;
+        position:relative;        
+        text-align:left;
+        color:$white;
+        @include make-sm-column(8);
+        @include make-sm-column-offset(2);
+        @include make-md-column(6);
+        @include make-md-column-offset(3);
+        @include make-lg-column(4);
+        @include make-lg-column-offset(4);
+    }
+
+    .view__first-subtitle{
+        display:block;
+        position:relative;        
+        @include make-sm-column(8);
+        @include make-sm-column-offset(2);
+        @include make-md-column(6);
+        @include make-md-column-offset(3);
+        @include make-lg-column(4);
+        @include make-lg-column-offset(4);
+        padding:8px 20px;
+        font-size:16px;
+        color:$white;
+
+        &.subtitle--center{ 
+            text-align:center;
         }
-        padding:0px 32px;
-        text-align:right;
+
+        &.subtitle--medium{
+            padding:32px 20px;
+        }
     }
 
     .view__public-nav{
@@ -299,12 +320,12 @@
     }
 
     .view__login-form{
-        width:100%;
-        top:40%;
-        @media screen and (min-width: $screen-sm) {
-            padding:0px 64px;
-            margin-top:-22px;
-        }
+        @include make-sm-column(8);
+        @include make-sm-column-offset(2);
+        @include make-md-column(6);
+        @include make-md-column-offset(3);
+        @include make-lg-column(4);
+        @include make-lg-column-offset(4);
     }
 
     .view__password-form{
