--- a/src/app/public/login/login.tmpl.html
+++ b/src/app/public/login/login.tmpl.html
@@ -6,7 +6,7 @@
     	<input class="form__row__entry input input--medium input--primary" type="password" class="form-control" id="password" placeholder="password" autocomplete="off" ng-model="password">
 	</div>
 	<div class="form__row form__row--left">
-        <a class="link link--medium" ui-sref="wegas.public.password">Password forgotten</a>
+        <a class="link link--medium link--simple" ui-sref="wegas.public.password">Password forgotten</a>
     </div>
 	<div class="form__row form__row--right">
         <input class="form__row__btn button button--medium button--default" type="submit" class="link" value="Login" />
