--- a/src/assets/sass/objects/_view.scss
+++ b/src/assets/sass/objects/_view.scss
@@ -393,5 +393,11 @@
             left:auto;
         }
     }
+    .view__logo-albasim{
+        display:block;
+        width:120px;
+        height:120px;
+        background-image:url("../images/albasim_logo.png");
+    }
 
 }
