--- a/src/app/public/signup/directives.tmpl/index.html
+++ b/src/app/public/signup/directives.tmpl/index.html
@@ -1,5 +1,5 @@
 <div class="modal__header">
-	<h5 class="modal__title">Signup</h5>
+	<h5 class="modal__title">Create account</h5>
 	<a class="modal__close button button--medium button--label-off button--default-reverse button--close" ng-click="close()">
    		<span class="button__label">Close</span>
 	</a>
@@ -25,7 +25,7 @@
 	      <input class="form__row__entry input input--secondary" ng-model="publicSignupCtrl.newUser.lastname" type="text" id="lastname" placeholder="Lastname" autocomplete="off">
 	  </div>
 	  <div class="form__row form__row--right">
-	      <input class="form__row__btn button button--default" type="submit" value="Sign up" />
+	      <input class="form__row__btn button button--default" type="submit" value="Create account" />
 	  </div>
 	</form>
 </div>
