--- a/src/assets/sass/objects/_link.scss
+++ b/src/assets/sass/objects/_link.scss
@@ -22,6 +22,29 @@
 		@include material-shadow(2);
 		transition: .5s;
 	}
+	
+	&.link--simple{
+		color:$white;
+		background:none;
+		cursor:pointer;
+		text-decoration:underline;
+		box-shadow: none;
+		padding:0px;
+		margin:0px;
+		
+		&:hover, &.focus, &.link.active{
+			color:darken($white, 6%);
+			background:none;
+			text-decoration:underline;
+			box-shadow: none;
+		}
+
+		&.link--active{
+			background:none;
+			color:$white;
+		}
+	}
+
 	&.link--medium{
 		margin:20px 0px;
 	}
