--- a/src/app/public/public.tmpl.html
+++ b/src/app/public/public.tmpl.html
@@ -4,11 +4,10 @@
 			<h1 class="view__first-header">Wegas</h1>
 		</div>
 		<div class="row">
-			<h2 class="view__first-subtitle">The "learning by doing" solution from <a class="link link--simple"href="http://www.albasim.ch">AlbaSIM</a></h2>
+			<h2 class="view__first-subtitle">The "learning by doing" solution from <a class="link link--simple"href="http://www.albasim.ch">AlbaSIM<span class="view__logo-albasim"></span></a></h2>
 		</div>
 		<div ui-view="form"></div>
 		<p class="view__first-subtitle subtitle--medium">Haven't yet a Wegas account ? <a class="link link--simple" ui-sref="wegas.public.signup">Create account</a></p>
 	</div>
-	<div class="view__logo-albasim"></div>
 </div>
 <div class="view view--modal" ui-view="modal"></div>
