Edit token name - Trainer Customize

--- a/src/app/private/trainer/customize/directives.tmpl/infos-form.html
+++ b/src/app/private/trainer/customize/directives.tmpl/infos-form.html
@@ -5,8 +5,8 @@
 	<textarea ng-model="activeInfos.comments" class="input input--small input--multi-lines" placeholder="Comment is optionnal"></textarea>
 </div>
 <div class="infos--secondary">
-	<label class="infos__label">Token</label>
-	<input ng-model="activeInfos.token" class="input input--small" type="text" placeholder="Token without space is required" />
+	<label class="infos__label">Access key</label>
+	<input ng-model="activeInfos.token" class="input input--small" type="text" placeholder="Access key without space is required" />
 	<label class="infos__label">Type</label>
 	<label class="choice">
 		<div class="choice__box">
