Fix animate coscenarists

--- a/src/app/private/scenarist/coscenarists/directives.tmpl/index.html
+++ b/src/app/private/scenarist/coscenarists/directives.tmpl/index.html
@@ -7,6 +7,6 @@
   </a>
 </div>
 
-<div class="modal__content modal__content--nav-off" scenarist-coscenarists-list></div>
+<div class="modal__content modal__content--nav-off" scenarist-coscenarists-list permissions="permissions"></div>
 
 <div class="modal__tools" scenarist-coscenarists-add></div>
