--- a/src/app/private/trainer/archives/directives.tmpl/index.html
+++ b/src/app/private/trainer/archives/directives.tmpl/index.html
@@ -6,9 +6,13 @@
 	</a>
 </div>
 <div
-	class="modal__content--nav-tools-off"
+	class="modal__content modal__content--nav-off"
 	sessions="trainerArchivesIndexController.archives"
 	delete="trainerArchivesIndexController.deleteArchivedSession"
 	unarchive="trainerArchivesIndexController.unarchiveSession"
+	search="trainerArchivesIndexController.sfilter.search"
 	trainer-sessions-archives-list
 ></div>
+<div class="modal__tools">
+	<input ng-model="trainerArchivesIndexController.sfilter.search" type="text" class="input input--small" placeholder="Search session" />
+</div>
