--- a/src/app/private/trainer/archives/directives.tmpl/list.html
+++ b/src/app/private/trainer/archives/directives.tmpl/list.html
@@ -1,4 +1,4 @@
-<div class="card card--big card--archive" ng-repeat="session in sessions">
+<div class="card card--big card--archive" ng-repeat="session in sessions | filter : { name: search }">
     <div class="card__illustration illustration illustration--big illustration--icon" illustration="{{session.properties.iconUri}}"></div>
     <div 
         class="card__description" 
@@ -19,4 +19,7 @@
             <span class="button__label">Delete session</span>
         </a> 
     </div>
+</div>
+<div ng-if="(sessions | filter:{name: search}).length == 0">
+    No archived session with the name "{{search}}"
 </div>
