- Better button rendering

--- a/src/app/private/admin/users/directives.tmpl/edit.html
+++ b/src/app/private/admin/users/directives.tmpl/edit.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="form__row form__row--right">
-            <a class="button button--small button--add">
+            <a class="button button--small button--success button--valid col-xs-push-9">
                 <span class="button__label" ng-click="save()">Save</span>
             </a>
         </div>
