--- a/src/app/private/admin/users/directives.tmpl/edit.html
+++ b/src/app/private/admin/users/directives.tmpl/edit.html
@@ -42,7 +42,7 @@
 
         <div class="form__row form__row--right">
             <a class="button button--small button--success button--valid col-xs-push-9">
-                <span class="button__label" ng-click="save()">Save</span>
+                <span class="button__label" ng-click="save()">Save changes</span>
             </a>
         </div>
 
