--- a/src/app/private/profile/tmpl/profile-content.html
+++ b/src/app/private/profile/tmpl/profile-content.html
@@ -51,7 +51,7 @@
   </div>
   <div class="form__row form__row--right">
     <div class="col-xs-12">
-      <input class="form__row__btn button button--default" type="submit"  value="Save" />
+      <input class="form__row__btn button button--success" type="submit"  value="Save changes" />
     </div>
   </div>
 </form>
