--- a/src/assets/sass/objects/_menu.scss
+++ b/src/assets/sass/objects/_menu.scss
@@ -7,59 +7,67 @@ $color-btn-menu: #000;
 }
 .btn--menu {
 	@include unselect();
-  	float:left;
+ float:left;
  	display: block; // Will inherit :before size
  	padding:0px;
  	margin:0px;
-	width: 48px;
-	height:48px;
-    &:hover {
-    	cursor: pointer;
-  	}
-  	span{
-    	@include unselect();
-  	  	position: relative;
-		display:block;
-  		width: 26px;
-  		margin:22px 11px 0px 11px;
-		height:2px;
-		background:$default-color;
-	    transition: all 0.3s ease-in-out;
+   width: 48px;
+   height:48px;
+   &:hover {
+     cursor: pointer;
+   }
+   span{
+     @include unselect();
+     position: relative;
+     display:block;
+     width: 26px;
+     margin:22px 11px 0px 11px;
+     height:2px;
+     background:$default-color;
 
-		&:before, &:after {
-		    content: "";
-		    display:block;
-		    position:absolute;
-		    visibility:visible;
-			opacity:1;
-		    left:0px;
-		    top:-8px;
-		    display: inline-block;
-		    width: 26px;
-		    height: 2px;
-		    border-radius:1px;
-		    background: $default-color;
-		    transition: all 0.3s ease-in-out;
-	  	}
-	  	&:after{
-	    	top:8px;
-	  	}
-  	}
-  	.menu--toggler:checked ~ & span{
-		background: transparent;
-	}
-	.menu--toggler:checked ~ & span:before,
-	.menu--toggler.menu--toggler_active ~ & span:before {
-		top:0px;
-		background:$default-color;
-		transform: rotate(-45deg);
-	}
-	.menu--toggler:checked ~ & span:after,
-	.menu--toggler.menu--toggler_active ~ & span:after {
-		top:0px;
-		background:$default-color;
-		transform: rotate(45deg);
-	}
+
+     transition: all 0.3s ease-in-out;
+     -webkit-transition: all 0.3s ease-in-out;
+
+
+     &:before, &:after {
+      content: "";
+      display:block;
+      position:absolute;
+      visibility:visible;
+      opacity:1;
+      left:0px;
+      top:-8px;
+      display: inline-block;
+      width: 26px;
+      height: 2px;
+      border-radius:1px;
+      background: $default-color;
+      transition: all 0.3s ease-in-out;
+      -webkit-transition: all 0.3s ease-in-out;
+
+    }
+    &:after{
+      top:8px;
+    }
+  }
+  .menu--toggler:checked ~ & span{
+    background: transparent;
+  }
+  .menu--toggler:checked ~ & span:before,
+  .menu--toggler.menu--toggler_active ~ & span:before {
+    top:0px;
+    background:$default-color;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+  }
+  .menu--toggler:checked ~ & span:after,
+  .menu--toggler.menu--toggler_active ~ & span:after {
+    top:0px;
+    background:$default-color;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+  }
 }
 .menu {
   visibility: hidden;
@@ -102,6 +110,6 @@ $color-btn-menu: #000;
     }
   }
   hr {
-      margin: 0;
+    margin: 0;
   }
 }
