- Fix bug with ie

--- a/src/app/public/login/login.tmpl.html
+++ b/src/app/public/login/login.tmpl.html
@@ -1,4 +1,4 @@
-<form class="view__login-form form" ng-submit="login()" ng-controller="PublicLoginCtrl">
+<form class="view__login-form form" ng-submit="login()">
 	<div class="form__row">
     	<input class="form__row__entry input input--medium input--primary" type="text" class="form-control" id="login" placeholder="email or username" autocomplete="off" ng-model="username">
 	</div>
