--- a/src/app/private/scenarist/history/directives.tmpl/actions.html
+++ b/src/app/private/scenarist/history/directives.tmpl/actions.html
@@ -1,7 +1,12 @@
-
-<a class="button button--small button--download" scenarist-history-download-pdf>PDF File</a>
-<a class="button button--small button--download" scenarist-history-download-json> JSON File</a>
-
-<a class="button button--small button--add">
-  <span class="button__label" ng-click="addVersion()">Create new version</span>
-</a>
+<div class="col-xs-9">
+    <a class="button button--small button--add">
+        <span class="button__label" ng-click="addVersion()">Create new version</span>
+    </a>
+    <a class="button button--small button--add">
+        <span class="button__label" ng-click="copyScenario()">Copy this scenario</span>
+    </a>
+</div>
+<div class="col-xs-3">
+    <a class="button button--small button--download" scenarist-history-download-pdf>PDF</a>
+    <a class="button button--small button--download" scenarist-history-download-json>JSON</a>
+</div>
