--- a/src/assets/sass/objects/_loading-bar.scss
+++ b/src/assets/sass/objects/_loading-bar.scss
@@ -1,7 +1,7 @@
 div#loading-bar .bar {
   background: $primary-color;
   height: 5px;
-
+  z-index:10003 !important;
 }
 
 // Needs to be improved
@@ -10,4 +10,44 @@ div#loading-bar .bar {
   &.view--loading {
     border-top: solid 5px #666;
   }
+}
+
+#loading-bar-spinner {
+	top:0!important;
+	left:0!important;
+	width:100%;
+	height:100%;
+	background-color:rgba(#333333, 0.6);
+	.spinner-icon {
+		display:block;
+		position:absolute;
+		top:50%;
+		left:50%;
+		border-radius:50% !important;
+		margin:-25px 0 0 -25px !important;
+		width: 50px !important;
+	  	height: 50px !important;
+
+		border:  solid 8px transparent;
+		border-top-color:  lighten($secondary-color, 10%);
+		border-left-color: lighten($secondary-color, 10%);
+
+		$spinner-timer: 800ms;
+		-webkit-animation: loading-bar-spinner $spinner-timer linear infinite !important;
+	 	-moz-animation:    loading-bar-spinner $spinner-timer linear infinite !important;
+	  	-ms-animation:     loading-bar-spinner $spinner-timer linear infinite !important;
+		-o-animation:      loading-bar-spinner $spinner-timer linear infinite !important;
+		animation:         loading-bar-spinner $spinner-timer linear infinite !important;
+	}
+	&:after{
+		content:"This action requires time. Please wait.";
+		display:block;
+		position:absolute;
+		top:50%;
+		left:50%;
+		width:280px;
+		margin:40px 0 0 -140px;
+		text-align:center;
+		color:white;
+	}
 }
